# HotelManagementSystem

./: CMakeLists.txt  README.md  hotelmanagementsystem.cpp  main.cpp  main.h
.github/workflows/: scorecard.yml
